change auto save dir (DT2)

--- a/App/AppInfo/Launcher/IpePortable.ini
+++ b/App/AppInfo/Launcher/IpePortable.ini
@@ -5,6 +5,4 @@ DirectoryMoveOK=yes
 [Environment]
 IPELATEXPATH=%PAL:PortableAppsDir:ForwardSlash%/CommonFiles/MiKTeX/texmfs/install/miktex/bin
 IPELATEXDIR=%PAL:DataDir%\latexrun
-
-[FilesMove]
-*.autosave=%DOCUMENTS%
+IPESAVEDIR=%PAL:DataDir%
