update Ipe to 7.2.11

--- a/App/AppInfo/appinfo.ini
+++ b/App/AppInfo/appinfo.ini
@@ -7,6 +7,7 @@ Name=Ipe Portable
 AppID=IpePortable
 Publisher=Otfried Cheong & PortableApps.com
 Homepage=PortableApps.com/node/56085
+Donate=http://ipe.otfried.org/donate.html
 Category=Graphics & Pictures
 Description=Extensible drawing editor
 Language=English
@@ -18,8 +19,8 @@ Freeware=true
 CommercialUse=true
 
 [Version]
-PackageVersion=7.2.6.2
-DisplayVersion=7.2.7 Dev Test 2
+PackageVersion=7.2.7.1
+DisplayVersion=7.2.11 Dev Test 1
 
 [Control]
 Icons=1
